<?xml version="1.0"?>
<package format="2">
  <name>bebop_posmen</name>
  <version>0.0.0</version>
  <description>Abg Posmen bebop controll using find_object_2d</description>

  <maintainer email="zulsyah7@gmail.com">Zulfhanizam Amir Syahputra</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
